# AI-Playground

nomads-agent/: main.py  pyproject.toml
product-market-research-crew/: main.py  pyproject.toml
product-market-research-crew/ai-agent-output/: html_scraper_results.json  report.md  search_queries.json  search_results.json
